tests/baselines/reference/superPropertyAccess2.errors.txt
==== tests/cases/compiler/superPropertyAccess2.ts (6 errors) ====
    class C {
        public static foo() { }
        public get x() {
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return 1;
        }
    
        public static bar() { }
    }
    
    class D extends C {
        public static foo() {
            super.bar(); // OK
            super.x;  // error
                  ~
!!! error TS2339: Property 'x' does not exist on type 'typeof C'.
        }
    
        constructor() {
            super();
            super.bar(); // error
                  ~~~
!!! error TS2339: Property 'bar' does not exist on type 'C'.
            super.x;  // error
                  ~
!!! error TS2340: Only public methods of the base class are accessible via the 'super' keyword
        }
    
        public static get y() {
                          ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            super.bar(); // OK
            super.x; // error
                  ~
!!! error TS2339: Property 'x' does not exist on type 'typeof C'.
            return 1;
        }
    }